# VRX_NUMarine

./: .gitignore  Dockerfile  LidarCamFusion.py  LidarCamMatrix.py  README.md  build_image.sh  camera.py  controller.py  controller_vrx.py  cuntroller.py  pub.py  robot_localization_debug.txt  run_image.sh  sensorFusion.py  t500_constant_value.py
Heartbeat_pkg/: CMakeLists.txt  package.xml
Heartbeat_pkg/src/: heartbeat_publisher.cpp  heartbeat_subscriber.cpp
Kvaser Driver/canlib/: libcanlib.so.1.10.5
Kvaser Driver/common/: .Module.symvers.cmd  .VCanOsIf.o.cmd  .VCanOsIf.o.d  .capabilities.o.cmd  .capabilities.o.d  .dlc.o.cmd  .dlc.o.d  .kvcommon.ko.cmd  .kvcommon.mod.cmd  .kvcommon.mod.o.cmd  .kvcommon.o.cmd  .modules.order.cmd  .objbuf.o.cmd  .queue.o.cmd  .queue.o.d  .softsync.o.cmd  .softsync.o.d  .ticks.o.cmd  .ticks.o.d  .util.o.cmd  .util.o.d  Module.symvers  kvcommon.ko  kvcommon.mod  kvcommon.mod.c  modules.order
Kvaser Driver/kvflash/canlib/: kv_flash_prog
Kvaser Driver/leaf/: .Module.symvers.cmd  .leaf.ko.cmd  .leaf.mod.cmd  .leaf.mod.o.cmd  .leaf.o.cmd  .leafHWIf.o.cmd  .modules.order.cmd  leaf.ko  leaf.mod  leaf.mod.c  modules.order
Kvaser Driver/linlib/: liblinlib.so.1.6.10
Kvaser Driver/mhydra/: .Module.symvers.cmd  .ioctl_handler.o.cmd  .mhydra.ko.cmd  .mhydra.mod.cmd  .mhydra.mod.o.cmd  .mhydra.o.cmd  .mhydraHWIf.o.cmd  .mhydraHWIf_TRP.o.cmd  .modules.order.cmd  mhydra.ko  mhydra.mod  mhydra.mod.c  modules.order
Kvaser Driver/pcican/: .Module.symvers.cmd  .PciCanHwIf.o.cmd  .dallas.o.cmd  .kvpcican.ko.cmd  .kvpcican.mod.cmd  .kvpcican.mod.o.cmd  .kvpcican.o.cmd  .modules.order.cmd  kvpcican.ko  kvpcican.mod  kvpcican.mod.c  modules.order
Kvaser Driver/pcican2/: .Module.symvers.cmd  .PciCan2HwIf.o.cmd  .kvpcicanII.ko.cmd  .kvpcicanII.mod.cmd  .kvpcicanII.mod.o.cmd  .kvpcicanII.o.cmd  .memQ.o.cmd  .modules.order.cmd  kvpcicanII.ko  kvpcicanII.mod  kvpcicanII.mod.c  modules.order
Kvaser Driver/pciefd/: .Module.symvers.cmd  .kvpciefd.ko.cmd  .kvpciefd.mod.cmd  .kvpciefd.mod.o.cmd  .kvpciefd.o.cmd  .modules.order.cmd  .pciefd_hwif.o.cmd  kernel_ver  kvpciefd.ko  kvpciefd.mod  kvpciefd.mod.c  modules.order
Kvaser Driver/pciefd/hw/: .pciefd_altera.o.cmd  .pciefd_sf2.o.cmd  .pciefd_xilinx.o.cmd
Kvaser Driver/usbcanII/: .Module.symvers.cmd  .modules.order.cmd  .usbcanHWIf.o.cmd  .usbcanII.ko.cmd  .usbcanII.mod.cmd  .usbcanII.mod.o.cmd  .usbcanII.o.cmd  modules.order  usbcanII.ko  usbcanII.mod  usbcanII.mod.c
Kvaser Driver/virtualcan/: .Module.symvers.cmd  .kvvirtualcan.ko.cmd  .kvvirtualcan.mod.cmd  .kvvirtualcan.mod.o.cmd  .kvvirtualcan.o.cmd  .modules.order.cmd  .virtualcan.o.cmd  kvvirtualcan.ko  kvvirtualcan.mod  kvvirtualcan.mod.c  modules.order
MPC/: Guidance.py  NUC_Controller.py  config.yaml  controller.py  controller2.py  cuntroller.py  force_calculator.py  navigation.py
Sensor Fusion/: calibration.py  calibration_data.npz  camera_calibration_data.npz  camera_ros_params.txt  chessboard_distance.py  flir.py  fusion_v1.py  fusion_v2.py  fusion_v3.py  testing.py
animaltask/: animaltask.py  greenpublisher.py
gps_odom_pkg/: package.xml
gps_odom_pkg/config/: dual_ekf_navsat_params.yaml  mapper_params_online_sync.yaml  nav2_params.yaml
gps_odom_pkg/launch/: localization_launch.py  online_sync_launch.py
gps_waypoint_logger/: package.xml  setup.cfg  setup.py
gps_waypoint_logger/config/: gps_waypoints.yaml
gps_waypoint_logger/gps_waypoint_logger/: gps_waypoint_logger.py  logged_waypoint_follower.py  waypoints_publisher.py
imu_heading_pkg/: package.xml
imu_heading_pkg/src/: imu_heading_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lib/guidance/: guidance_service
install/lib/guidance_cpp/: guidance_service
install/lib/guidance_service/: guidance_service
install/lib/imu_heading_pkg/: imu_heading_node
install/lib/mpc/: control_node
install/lib/my_navigation_pkg/: goal_pose_broadcaster  thruster_command_node
install/lib/my_velocity_to_pwm/: velocity_to_pwm_node
install/lib/teleop_cpp_ros2/: usv_teleop
install/lib/vrx_ros/: pose_tf_broadcaster
install/share/gps_odom_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/guidance/: package.dsv  package.ps1  package.sh
install/share/guidance_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/guidance_service/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/guidance_service/cmake/: guidance_serviceConfig.cmake
install/share/imu_heading_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lidar_filter/: CMakeLists.txt  package.xml
lidar_filter/config/: params.yaml
lidar_filter/launch/: lidar_filter_launch.py
lidar_filter/src/: lidar_filter_node.cpp
log/: latest_build
my_can_pkg/: CMakeLists.txt  package.xml
my_can_pkg/launch/: kvaser_launch.py
my_can_pkg/src/: can_float_publisher.cpp  can_thrust_pub.cpp  thrust_pub.cpp
my_velocity_to_pwm/: package.xml
my_velocity_to_pwm/src/: velocity_to_pwm_node.cpp
scan_code_pkg/: README.md  package.xml  setup.cfg  setup.py
scan_code_pkg/scan_code_pkg/: detectYOLOv8Gazebo.py  scanCodeGazebo.py  scanCodeWebcam.py  testYOLOv8Model.py
src/vrx/: Dockerfile  README.md  build_image.sh  run_image.sh
src/vrx/ros_packages/guidance/: CMakeLists.txt  package.xml  setup.py
src/vrx/ros_packages/guidance/guidance/: guidance_service.py
src/vrx/ros_packages/guidance_cpp/: CMakeLists.txt  package.xml
src/vrx/ros_packages/guidance_cpp/src/: guidance_service.cpp
src/vrx/ros_packages/guidance_cpp/srv/: Trajectory.srv
src/vrx/ros_packages/mpc/: package.xml  setup.py
src/vrx/ros_packages/mpc/mpc/: control_node.py
teleop_cpp_ros2/: CMakeLists.txt
teleop_cpp_ros2/src/: usv_teleop.cpp
vrx_gz/launch/: competition.launch.py
vrx_gz/worlds/: test_world.sdf  wayfinding_task.sdf  wildlife_task.sdf
(+145 files in other folders)
