<package format="3">
  <name>HeartBeat_pkg</name>
  <version>0.0.1</version>
  <description>The HeartBeat_pkg package for CAN heartbeat processing in ROS 2</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

