<?xml version="1.0"?>
<package format="3">
  <name>guidance_service</name>
  <version>0.0.0</version>
  <description>Guidance service package for spline fitting</description>
  <maintainer email="your.email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>
  <depend>scipy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
