<?xml version="1.0"?>
<package format="3">
  <name>mpc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="c3374355@uon.edu.au">rileychron111</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>numpy</depend>
  <depend>scipy</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

